<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="enter your name" />

    <CheckBox
        android:id="@+id/checkbox_whipped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/whipped_cream"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkbox_chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/chocolate"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-black"
        android:padding="2dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/minus_sign"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/plus_sign"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="5dp"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/currency"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/oreder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp" />


</LinearLayout>